--- a/src/main/resources/com/example/project/Game.fxml
+++ b/src/main/resources/com/example/project/Game.fxml
@@ -20,5 +20,10 @@
             <Image url="@Coin.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="gameover" fitHeight="170.0" fitWidth="281.0" layoutX="238.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../gameOver.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
