--- a/src/main/resources/com/example/project/Game.fxml
+++ b/src/main/resources/com/example/project/Game.fxml
@@ -29,5 +29,6 @@
             <Image url="@../../../gameOver.png" />
          </image>
       </ImageView>
+      <Label fx:id="note" layoutX="31.0" layoutY="70.0" prefHeight="18.0" prefWidth="57.0" text="GG!" />
    </children>
 </AnchorPane>
